[package]
name = "mdmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13.0"
crossbeam-epoch = { version = "0.8", features = ["nightly"]}
crossbeam-utils = "0.7"
dhat = "0.2.4"
rayon = "1.5"
fxhash = "0.2.1"
bustle = "0.4"
dashmap = "5.0"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "mdmap"
harness = false

[profile.release]
debug = true